fix(ci): updating interstitial

--- a/.github/workflows/publish-dist.yml
+++ b/.github/workflows/publish-dist.yml
@@ -278,6 +278,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.VEGA_CI_BOT_GITHUB_TOKEN }}
         run: |
+          # set CID
           curl -L https://dist.ipfs.tech/kubo/v0.20.0/kubo_v0.20.0_linux-amd64.tar.gz -o kubo.tgz
           tar -xzf kubo.tgz
           export PATH="$PATH:$PWD/kubo"
@@ -285,19 +286,20 @@ jobs:
           new_hash=$(cat ${{ matrix.app }}-ipfs-hash)
           new_cid=$(ipfs cid format -v 1 -b base32 $new_hash)
 
-          ls -al ipfs-redirect
-
           (
             cd ipfs-redirect
 
+            # configure git
             git status
             cat .git/config
             git config --global user.email "vega-ci-bot@vega.xyz"
             git config --global user.name "vega-ci-bot"
 
+            # checkout new branch
             branch_name="update-hash-${{ github.ref }}"
             git checkout -b "$branch_name"
 
+            # update CID files
             if echo ${{ github.ref }} | grep -q main; then
               echo $new_hash > cidv0-mainnet.txt
               echo $new_cid > cidv1-mainnet.txt
@@ -308,9 +310,12 @@ jobs:
               git add cidv0-fairground.txt cidv1-fairground.txt
             fi
 
+            # create commit
             commit_msg="Automated hash update from ${{ github.ref }}"
             git commit -m "$commit_msg"
             git push -u origin "$branch_name"
+
+            # create PR and merge it
             pr_url="$(gh pr create --title "${commit_msg}" --body 'automated pull request to update CIDs')"
             echo $pr_url
             # once auto merge get's enabled on documentation repo let's do follow up
